# linux-hello-archive

./: .ccls  .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  TODO.md  config.json  config.toml  create_build.sh  linux_hello  package.sh
cmake/: FindPAM.cmake
data/: install.sh
src/: Record.h  Snapshot.cpp  Snapshot.h  User.h  camera.cpp  camera.h  darkness.cpp  darkness.h  face_recognition.cpp  face_recognition.h  face_recognition_model_v1.cpp  face_recognition_model_v1.h  main.cpp  pam_main.cpp  processing.cpp  processing.h  recording.cpp  recording.h  snapshot.cpp  snapshot.h  synchronized_queue.h  timing.cpp  timings.h  video.cpp  video.h
src/client/: CMakeLists.txt
src/client/src/: pam_main.cpp
src/command_line/: App.cpp  App.h  flag.cpp  flag.h  positional_argument.cpp  positional_argument.h  sub_command.cpp  sub_command.h  value.cpp  value.h
src/server/: CMakeLists.txt
src/server/src/: face_recognition.cpp  face_recognition.h  face_recognition_model_v1.cpp  face_recognition_model_v1.h  main.cpp  snapshot.h
src/server/src/timings/: checkpoint.cpp  checkpoint.h  record.cpp  record.h  timings.cpp  timings.h
